--- a/themes/drw/sass/typography/_headings.scss
+++ b/themes/drw/sass/typography/_headings.scss
@@ -9,7 +9,7 @@ h2.entry-title{
 p.site-title, p.site-logo{
 	background: #d2232a;
 	color: white;
-	padding: 7px 0 1em 0;
+	padding: 1em 0 7px 0;
 	a{
 		color: white;
 		text-decoration: none;
